# ebpf_test

./: README.md
01/: Makefile  hello.c
doc/: cmd_usage.md  referance.md  types.md
src/: CMakeLists.txt  bpf_compile.cmake  common.h  connect.bpf.c  init_tc.sh  lsm_connect.bpf.c  main.c  socketfilter.bpf.c  sockops.bpf.c  tc_egress.bpf.c
src/udp_app/: CMakeLists.txt  common.c  common.h  udp_client.c  udp_server.c
wireguard/: setup.sh
